prevent scrollbar flicker

--- a/components/marquee/marquee.module.scss
+++ b/components/marquee/marquee.module.scss
@@ -2,6 +2,7 @@
   $self: &;
 
   display: flex;
+  overflow: hidden;
 
   &__inner {
     display: flex;
